# ragproject

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmark.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: AppLayout.tsx  AuthScreen.tsx  ChatView.tsx  Composer.tsx  Logo.tsx  RequireAuth.tsx  Sidebar.tsx  StepTimeline.tsx  Welcome.tsx  icons.tsx
infra/: README.md  app.py  cdk.context.json  requirements.txt
infra/industryiq_infra/: industryiq_stack.py
infra/ragproject_infra/: ragproject_stack.py
scripts/: fetch_ssh_key.py  ingest_bulk.py  ingest_resilient.py  migrate_pg_to_milvus.py
src/industryiq/: config.py
src/industryiq/api/: admin_routes.py  deps.py
src/industryiq/core/: loaders.py  milvusvectorstore.py  pgvectorstore.py  pipeline.py  retrieval.py  vectorstore.py
src/industryiq/core/ingestion/: manifest.py
src/ragproject/: __init__.py  config.py
src/ragproject/api/: admin_routes.py  app.py  auth_routes.py  chat_routes.py  deps.py  file_loading.py  security.py
src/ragproject/core/: generation.py  loaders.py  milvusvectorstore.py  retrieval.py
src/ragproject/core/auth/: __init__.py  models.py  passwords.py  ports.py  service.py  tokens.py
src/ragproject/core/auth/adapters/: __init__.py  store_memory.py  store_pg.py
src/ragproject/core/chat/: __init__.py  models.py  ports.py  service.py
src/ragproject/core/chat/adapters/: session_documents.py  store_memory.py  store_pg.py
tests/: test_api.py  test_auth_api.py  test_auth_passwords.py  test_auth_service.py  test_auth_store_memory.py  test_auth_tokens.py  test_chat_api.py  test_chat_deps.py  test_chat_service.py  test_chat_session_documents.py  test_chat_store_memory.py  test_generation.py  test_ingest_manifest.py  test_loaders.py  test_milvusvectorstore_integration.py  test_pg_conversation_store_integration.py  test_pipeline.py  test_retrieval.py  test_vectorstore.py  test_version.py
tests/fixtures/: sample.txt
