[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragproject"
version = "0.0.1"
description = "A modular, testable RAG system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pypdf[crypto]>=5.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pymilvus>=2.4",
    "anthropic[bedrock]>=0.40",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "pre-commit", "httpx"]
# Local-dev AI provider (RAG_PROVIDER=anthropic): a CPU embedder for retrieval.
# Not needed in production, which uses Bedrock.
local = ["fastembed>=0.3"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
# These ship no type stubs; don't fail on their untyped imports.
module = ["docx.*", "pgvector.*", "pymilvus.*", "boto3.*", "botocore.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = fast unit tests only. Run DB-backed tests with: pytest -m integration
addopts = "-q --cov=ragproject --cov-report=term-missing -m 'not integration'"
markers = ["integration: tests that need real services (deselect with -m 'not integration')"]
filterwarnings = [
    # Third-party deprecation from Starlette's TestClient; not our code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
# These need real external services (DB / AWS Bedrock); they're covered by
# integration tests, not the default unit run, so exclude them from unit coverage.
omit = [
    "src/ragproject/core/pgvectorstore.py",
    "src/ragproject/core/milvusvectorstore.py",
    "src/ragproject/core/bedrock.py",
    "src/ragproject/core/anthropic_llm.py",
    "src/ragproject/core/local_embeddings.py",
    "src/ragproject/core/chat/adapters/store_pg.py",
]
