[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "industryiq"
version = "0.0.1"
description = "AI research agent for industry analysis — answers questions from a curated report library with cited sources"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pypdf[crypto]>=5.0",
    "python-docx>=1.1",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # Pin to the 2.6.x line: it matches the Milvus 2.6 server (docker-compose) and
    # has the BM25 full-text API the store uses. The 3.0.x client targets Milvus
    # 3.0 beta and does not pair with a stable 2.x server.
    "pymilvus>=2.6,<2.7",
    "anthropic[bedrock]>=0.40",
    "boto3>=1.34",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "pre-commit", "httpx"]
# Local-dev AI provider (RAG_PROVIDER=anthropic): a CPU embedder for retrieval.
# Not needed in production, which uses Bedrock.
local = ["fastembed>=0.3"]
# Layout-aware PDF parsing (PDF_PARSER=docling): pulls in PyTorch + models, so
# it is opt-in. Only ingestion hosts that set PDF_PARSER=docling need it.
docling = ["docling>=2.0"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # errors, pyflakes, import-sort, pyupgrade, bugbear

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
# These ship no type stubs; don't fail on their untyped imports.
module = ["docx.*", "pgvector.*", "pymilvus.*", "boto3.*", "botocore.*", "fastembed.*", "bcrypt.*", "docling.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = fast unit tests only. Run DB-backed tests with: pytest -m integration
addopts = "-q --cov=industryiq --cov-report=term-missing -m 'not integration'"
markers = ["integration: tests that need real services (deselect with -m 'not integration')"]
filterwarnings = [
    # Third-party deprecation from Starlette's TestClient; not our code.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
# These need real external services (DB / AWS Bedrock); they're covered by
# integration tests, not the default unit run, so exclude them from unit coverage.
omit = [
    "src/industryiq/core/pgvectorstore.py",
    "src/industryiq/core/milvusvectorstore.py",
    "src/industryiq/core/bedrock.py",
    "src/industryiq/core/anthropic_llm.py",
    "src/industryiq/core/local_embeddings.py",
    "src/industryiq/core/chat/adapters/store_pg.py",
    "src/industryiq/core/auth/adapters/store_pg.py",
    "src/industryiq/core/ingestion/adapters/store_pg.py",
]
